<resources>
    <string name="app_name">KHOJ</string>
    <string name="trending">Looking For ?</string>
    <string name="dashboard">Dashboard</string>
    <string name="userprofile">User</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favourites</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="username">UserName</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoia2F1c2hhbHgiLCJhIjoiY2tjeHgyMmE4MDRkMDJzbmgxMTlyMjB3bCJ9.ZIQa5S4VbZMJ66Iz3jvAZw</string>
    <string name="mapbutton">Search</string>
    <string name="locationviewed">Add Hotels and Cafes</string>
    <string name="addlandmarks">Add Landmarks</string>
    <string name="addhospitals">Add Hospitals</string>
    <string name="Treningplaces">Add Bus Stops</string>
    <string name="feedback">Feedbacks</string>
    <string name="userrating">User Rating</string>
    <string name="userlogin">User Login</string>
    <string name="hinttext"><u>hinttext</u></string>
    <string name="viewmore">View More</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="info">Info</string>
    <string name="specializationview">Specialization</string>
    <string name="History">History</string>
    <string name="siteviews">Site View</string>
    <string name="inactivetitle"> Add a review below</string>
    <string name="requiremnets">Set Requirements</string>
    <string name="user_location_permission_explanation">EXPLANATION_HERE</string>
    <string name="user_location_permission_not_granted0">Explanation</string>
    <string name="new_location"> location </string>
    <string name="default_web_client_id1">default_web_client_id</string>


</resources>