<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/dashboard" />
        <item

            android:id="@+id/trending"
            android:icon="@drawable/ic_baseline_trend"
            android:title="@string/trending" />

        <item

            android:id="@+id/user"
            android:icon="@drawable/ic_baseline_person_pin_24"
            android:title="@string/userprofile" />
        <item
            android:checked="true"
            android:id="@+id/menu_none"
            android:title="gf"
            android:visible="false"/>
    </group>
</menu>