<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dashboard">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profilepicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/verified_round"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:hint="UserName"
        android:textColorHint="@drawable/selector"
        android:textSize="20sp"
        android:fontFamily="@font/montserratmedium"
        android:textStyle="normal"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/profilepicture"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/username"
        />


    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:text="@string/locationviewed"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <Button
        android:id="@+id/locationshotels"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/buttonborder"
        android:paddingStart="10dp"
        android:text="Add Hotels"
        android:textColor="@color/colorWhite"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/line" />

    <TextView
        android:id="@+id/feedbacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:text="@string/addhospitals"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <Button
        android:id="@+id/locationhospitals"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/buttonborder"
        android:paddingStart="10dp"
        android:text="Add Hospitals"
        android:textColor="@color/colorWhite"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/locationshotels" />

    <TextView
        android:id="@+id/userrating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:text="@string/addlandmarks"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbacks" />

    <Button
        android:id="@+id/locationlandmarks"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/buttonborder"
        android:paddingStart="10dp"
        android:text="Add Landmarks"
        android:textColor="@color/colorWhite"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/locationhospitals" />

    <TextView
        android:id="@+id/userlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:text="@string/Treningplaces"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userrating" />

    <Button
        android:id="@+id/locationtrending"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/buttonborder"
        android:paddingStart="10dp"
        android:text="Add BusStop"
        android:textColor="@color/colorWhite"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/locationlandmarks" />

</androidx.constraintlayout.widget.ConstraintLayout>