<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dashboard"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/descriptionimage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="@drawable/detailbackground"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="200dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/background"
        android:layout_marginTop="10dp"
        android:layout_width="40dp"
        android:text="MAP"
        android:padding="4dp"
        android:textColor="@color/colorWhite"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:isIndicator="true"
        android:progressTint="@color/yellow"
        android:progressBackgroundTint="@color/colorWhite"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/descriptionimage"
        app:layout_constraintTop_toBottomOf="@id/background"
        app:layout_constraintBottom_toTopOf="@id/line1"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/descriptionimage"
        />

    <RelativeLayout
        android:id="@+id/sidemenu"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="208dp"
        android:background="@color/dashboard">

        <TextView
            android:textAlignment="center"
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="6dp"
            android:layout_marginTop="15dp"
            android:text="@string/description"
            android:background="@color/appBar"
            android:textColor="@color/colorWhite"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:layout_marginStart="2dp"
            android:focusable="true" />

        <TextView
            android:id="@+id/reviews"
            android:background="@color/appBar"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_below="@+id/details"
            android:layout_marginTop="20dp"
            android:text="@string/reviews"
            android:textColor="@color/colorWhite"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:layout_marginStart="2dp"
            android:focusable="true"
            />

        <TextView
            android:background="@color/appBar"
            android:textAlignment="center"
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_below="@+id/reviews"
            android:layout_marginTop="20dp"
            android:layout_marginStart="2dp"
            android:text="@string/info"
            android:textColor="@color/colorWhite"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:focusable="true"
            />


    </RelativeLayout>

    <FrameLayout
        android:layout_margin="5dp"
        android:id="@+id/description_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/sidemenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1"
        />
</androidx.constraintlayout.widget.ConstraintLayout>